--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/addons/p5.sound.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/molleindustria/p5.play@master/lib/p5.play.js"></script>
+    <script src="//cdn.jsdelivr.net/gh/molleindustria/p5.play@master/lib/p5.play.js"></script>
 
     <script src="src/index.js"></script>
   </body>
