--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Static Template</title>
+    <title>Log Jump</title>
 
     <link href="styles.css" rel="stylesheet" />
   </head>
@@ -12,7 +12,7 @@
     <script src="//cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/addons/p5.sound.js"></script>
     <script src="//cdn.jsdelivr.net/gh/molleindustria/p5.play@master/lib/p5.play.js"></script>
-
+    <script src="src/createTileSprite.js"></script>
     <script src="src/index.js"></script>
   </body>
 </html>
